使用 Colab 创建而成

--- a/site/en/hub/tutorials/cross_lingual_similarity_with_tf_hub_multilingual_universal_encoder.ipynb
+++ b/site/en/hub/tutorials/cross_lingual_similarity_with_tf_hub_multilingual_universal_encoder.ipynb
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "id": "MSeY-MUQo2Ha"
       },
@@ -161,8 +161,7 @@
         "\n",
         "  # arccos based text similarity (Yang et al. 2019; Cer et al. 2019)\n",
         "  sim = 1 - np.arccos(\n",
-        "      sklearn.metrics.pairwise.cosine_similarity(embeddings_1,\n",
-        "                                                 embeddings_2))/np.pi\n",
+        "      sklearn.metrics.pairwise.cosine_similarity(embeddings_1, embeddings_2))/np.pi\n",
         "\n",
         "  embeddings_1_col, embeddings_2_col, sim_col = [], [], []\n",
         "  for i in range(len(embeddings_1)):\n",
@@ -184,7 +183,7 @@
         "                            tools=\"save\",toolbar_location='below', tooltips=[\n",
         "                                ('pair', '@embeddings_1 ||| @embeddings_2'),\n",
         "                                ('sim', '@sim')])\n",
-        "  p.rect(x=\"embeddings_1\", y=\"embeddings_2\", plot_width=1, plot_height=1, source=df,\n",
+        "  p.rect(x=\"embeddings_1\", y=\"embeddings_2\", width=1, height=1, source=df,\n",
         "         fill_color={'field': 'sim', 'transform': mapper}, line_color=None)\n",
         "\n",
         "  p.title.text_font_size = '12pt'\n",
@@ -211,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "id": "mkmF3w8WGLcM"
       },
@@ -250,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "metadata": {
         "id": "Q8F4LNGFqOiq"
       },
@@ -275,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "metadata": {
         "id": "weXZqLtTJY9b"
       },
@@ -319,14 +318,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
       "metadata": {
         "id": "R2hbCMhmiDWR",
-        "outputId": "7e18106a-430e-4df1-c63d-03a61d137e35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "384f625f-8e16-4634-912e-df699c0b4c03"
       },
       "outputs": [
         {
@@ -336,8 +335,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-a248b311c62c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvisualize_similarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultilingual_in_en_result\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultilingual_result\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmultilingual_example_in_en\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultilingual_example\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;34m\"Multilingual Universal Sentence Encoder for Semantic Retrieval (Yang et al., 2019)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-11-399dd4157896>\u001b[0m in \u001b[0;36mvisualize_similarity\u001b[0;34m(embeddings_1, embeddings_2, labels_1, labels_2, plot_title, plot_width, plot_height, xaxis_font_size, yaxis_font_size)\u001b[0m\n\u001b[1;32m     41\u001b[0m       high=df.sim.max())\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m   p = bokeh.plotting.figure(title=plot_title, x_range=labels_1,\n\u001b[0m\u001b[1;32m     44\u001b[0m                             \u001b[0mx_axis_location\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"above\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m                             \u001b[0my_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-20-a248b311c62c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvisualize_similarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultilingual_in_en_result\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultilingual_result\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmultilingual_example_in_en\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultilingual_example\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;34m\"Multilingual Universal Sentence Encoder for Semantic Retrieval (Yang et al., 2019)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-16-a9a5e36e1f75>\u001b[0m in \u001b[0;36mvisualize_similarity\u001b[0;34m(embeddings_1, embeddings_2, labels_1, labels_2, plot_title, plot_width, plot_height, xaxis_font_size, yaxis_font_size)\u001b[0m\n\u001b[1;32m     41\u001b[0m       high=df.sim.max())\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m   p = bokeh.plotting.figure(title=plot_title, x_range=labels_1,\n\u001b[0m\u001b[1;32m     44\u001b[0m                             \u001b[0mx_axis_location\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"above\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m                             \u001b[0my_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/bokeh/plotting/_figure.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *arg, **kw)\u001b[0m\n\u001b[1;32m    195\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 197\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raise_attribute_error_with_matches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mopts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproperties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/bokeh/core/has_props.py\u001b[0m in \u001b[0;36m_raise_attribute_error_with_matches\u001b[0;34m(self, name, properties)\u001b[0m\n\u001b[1;32m    375\u001b[0m             \u001b[0mmatches\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproperties\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"possible\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    376\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 377\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"unexpected attribute {name!r} to {self.__class__.__name__}, {text} attributes are {nice_join(matches)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    378\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    379\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__str__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: unexpected attribute 'plot_width' to figure, similar attributes are outer_width, width or min_width"
@@ -362,11 +361,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "Q9UDpStmq7Ii",
-        "outputId": "2d5e835f-b16a-4f24-95b9-e91d82d430c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "2d5e835f-b16a-4f24-95b9-e91d82d430c9"
       },
       "outputs": [
         {
@@ -402,11 +401,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "QE68UejYp86z",
-        "outputId": "098c5f70-ab57-4207-fb42-9b7640b3dfca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "098c5f70-ab57-4207-fb42-9b7640b3dfca"
       },
       "outputs": [
         {
